// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config cs should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Když lépe pochopíme, co vás zajímá, budeme vám zobrazovat přesnější obsah na míru.
      Kliknutím na tlačítko „Přijmout všechny“ dáte společnostem test1, test2 a test3 souhlas s využíváním souborů Cookies na účely personalizace, analýzy a cíleného marketingu.
      <a href=\\"https://www.lmc.eu/cs/cookies\\" target=\\"_blank\\">Co jsou to Cookies a jak je používáme?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Přijmout všechny",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Přijmout nezbytné",
    },
    "title": "Díky Cookies budou naše stránky ještě lepší",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config de should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Indem Sie auf „Alles akzeptieren“ klicken, stimmen Sie der Verwendung von Cookies und anderen Identifikatoren auf Ihrem Gerät durch test1, test2 und test3 zu. Die Verwendung dieser Cookies und anderer Identifikatoren erleichtert die Navigation auf der Website, die Anzeige personalisierter Inhalte, gezieltes Marketing und die Analyse der Nutzung unserer Produkte und Dienstleistungen.
      Weitere Informationen finden Sie unter <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">Verwendung von Cookies</a>.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Alles akzeptieren",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Das Notwendigste akzeptieren",
    },
    "title": "Diese Website verwendet Cookies",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config en should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "By better understanding what you're interested in, we'll show you more relevant content.
      By clicking the \\"Accept all\\" button, you give test1, test2 and test3 your consent to use cookies for personalisation, analytics and targeted marketing.
      <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">What are cookies and how do we use them?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Accept all",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Accept necessary",
    },
    "title": "Cookies make our site even better",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config hu should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "A „Mindent elfogadok” gombra kattintva a hozzájárulását adja ahhoz, hogy az test1, test2 és test3 süti fájlokat és egyéb azonosítókat használjon az Ön eszközén. E süti fájlok és egyéb azonosítók használata megkönnyíti a weboldalon belüli navigációt, a személyre szabott tartalom megjelenítését, a célzott marketinget, valamint termékeink és szolgáltatásaink használatának elemzését.
      Bővebb információkat a <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">Sütihasználat</a> oldalon talál.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Minden elfogadása",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "A legszükségesebbek elfogadása",
    },
    "title": "Az oldalak süti fájlokat használnak",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config pl should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Gdy lepiej zrozumiemy, co Cię interesuje, pokażemy dokładniejsze treści dopasowane do Twoich preferencji.
      Kliknij w przycisk „Akceptuj wszystkie”, aby wyrazić zgodę na wykorzystanie plików cookie przez
      firmy test1, test2 i test3 do personalizacji, analizy i ukierunkowanego marketingu.
      <a href=\\"https://www.lmc.eu/pl/cookies\\" target=\\"_blank\\">Co to są pliki cookie i jak je wykorzystujemy?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Akceptuj wszystkie",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Akceptuj niezbędne",
    },
    "title": "Dzięki plikom Cookies nasza strona będzie jeszcze lepsza",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config ru should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Нажав «Принять все», Вы даете свое согласие компаниям test1, test2 и test3 на использование файлов cookie и других идентификаторов на Вашем устройстве. Использование файлов cookie и других идентификаторов облегчит навигацию по сайту, отображения персонализированного контента, целевой маркетинг, анализ использования наших продуктов и услуг.
      Для получения дополнительной информации см. раздел <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">использование файлов cookie</a>.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Принять все",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Принятие необходимо",
    },
    "title": "Этот сайт использует файлы cookie",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config sk should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Presnejší obsah na mieru vám budeme zobrazovať, keď lepšie pochopíme, čo vás zaujíma.
      Kliknutím na tlačidlo „Prijať všetky“, čím dáte spoločnostiam test1, test2 a test3 súhlas s využívaním súborov Cookies za účelom personalizácie, analýzy a cieleného marketingu.
      <a href=\\"https://www.lmc.eu/sk/cookies\\" target=\\"_blank\\">Čo sú to Cookies a ako ich používame?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Prijať všetky",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Prijať nevyhnutné",
    },
    "title": "Vďaka Cookies budú naše stránky ešte lepšie",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;

exports[`config uk should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Натиснувши «Прийняти все», Ви даєте свою згоду компаніям test1, test2 i test3 на використання файлів cookie та інших ідентифікаторів на Вашому пристрої. Використання цих файлів cookie та інших ідентифікаторів полегшить навігацію по сайту, відображення персоналізованого контенту, цільовий маркетинг, аналіз використання наших продуктів і послуг.
      Для отримання додаткової інформації див. розділ <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">Використання файлів cookie</a>.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Прийняти все",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Прийняття необхідно",
    },
    "title": "Цей сайт використовує файли cookie",
  },
  "settings_modal": Object {
    "blocks": Array [
      Object {
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
  },
}
`;
